# verdigris_cpp

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  readme.txt  todo.md
include/compiler/: arena.hpp  lexer.hpp  parser.hpp  token.hpp  tree_builder.hpp
src/: main.cpp
src/parser/: parser.cpp
text/: cst.txt  ebnf.txt  lexer.txt  main.vd  parser.txt  philosophy.md  redesign.vd  spec.vd  test.vd
